# rpg-backend/docs/swagger.json
@@ -10,24 +10,19 @@
     "basePath": "/api",
     "paths": {
         "/api/monster/move": {
-            "post": {
+            "get": {
                 "description": "Returns monster move based on current battle state",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "summary": "Get monster's next move",
                 "parameters": [
                     {
-                        "description": "Current battle state",
+                        "type": "string",
+                        "description": "Current battle state as JSON",
                         "name": "state",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.BattleState"
-                        }
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -77,41 +72,6 @@
                 }
             }
         },
-        "models.BattleState": {
-            "type": "object",
-            "properties": {
-                "active_buffs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.ActiveBuff"
-                    }
-                },
-                "hero_hp": {
-                    "type": "integer"
-                },
-                "hero_max_hp": {
-                    "type": "integer"
-                },
-                "hero_stats": {
-                    "$ref": "#/definitions/models.Stat"
-                },
-                "monster_hp": {
-                    "type": "integer"
-                },
-                "monster_id": {
-                    "type": "string"
-                },
-                "monster_max_hp": {
-                    "type": "integer"
-                },
-                "monster_stats": {
-                    "$ref": "#/definitions/models.Stat"
-                },
-                "turn": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.Monster": {
             "type": "object",
             "properties": {
@@ -122,7 +82,6 @@
                     "type": "string"
                 },
                 "moves": {
-                    "description": "← string ID-evi",
                     "type": "array",
                     "items": {
                         "type": "string"
